--- a/src/Components/Styles/DragArea.less
+++ b/src/Components/Styles/DragArea.less
@@ -7,12 +7,7 @@
   .draggable-element {
     padding: 10px;
     display: inline-block;
+    position: relative;
 
-    &.toFront {
-      .canvas-window {
-      }
-      position: relative;
-      z-index: 1000;
-    }
   }
 }
