--- a/src/Components/Styles/PropertyValueInput.less
+++ b/src/Components/Styles/PropertyValueInput.less
@@ -11,6 +11,7 @@
 .rc-slider-handle {
   background-color: @active-color !important;
   border: none !important;
+  cursor: default !important;
 }
 
 .rc-slider-handle {
